[gd_scene load_steps=10 format=3 uid="uid://cl5ox54rmmaug"]

[ext_resource type="Script" path="res://scripts/marquart/RepairingInstrument.gd" id="1_qnpl5"]
[ext_resource type="Texture2D" uid="uid://iwd0gtwc77vl" path="res://assets/sprites/Trumpet.png" id="2_103vh"]
[ext_resource type="Texture2D" uid="uid://ctnsv5s4e306m" path="res://assets/sprites/TrumpetValve.png" id="3_71cdg"]
[ext_resource type="Script" path="res://scenes/marquart/Valve.gd" id="5_j3uhc"]
[ext_resource type="Script" path="res://scenes/marquart/Valve2.gd" id="5_r1kc7"]
[ext_resource type="Script" path="res://scenes/marquart/Valve3.gd" id="7_crack"]
[ext_resource type="Texture2D" uid="uid://cykcbpp0njq3e" path="res://assets/sprites/ValveOutline.png" id="7_rr7b6"]
[ext_resource type="PackedScene" path="res://scenes/pencil_timer.tscn" id="8_2n76m"]

[sub_resource type="CanvasTexture" id="CanvasTexture_8vry4"]

[node name="RepairingInstrument" type="Node"]
script = ExtResource("1_qnpl5")

[node name="Trumpet" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(960, 540)
texture = ExtResource("2_103vh")

[node name="Valve" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(529, 811)
scale = Vector2(0.447449, 0.447449)
texture = ExtResource("3_71cdg")
script = ExtResource("5_j3uhc")

[node name="Valve2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(1016, 234)
scale = Vector2(0.447449, 0.447449)
texture = ExtResource("3_71cdg")
script = ExtResource("5_r1kc7")

[node name="Valve3" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(1617, 814)
scale = Vector2(0.447449, 0.447449)
texture = ExtResource("3_71cdg")
script = ExtResource("7_crack")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
offset_right = 1968.0
offset_bottom = 1133.0
texture = SubResource("CanvasTexture_8vry4")
expand_mode = 2

[node name="Outline" type="Sprite2D" parent="."]
visible = false
position = Vector2(942, 423)
scale = Vector2(0.376667, 0.376667)
texture = ExtResource("7_rr7b6")

[node name="Outline2" type="Sprite2D" parent="."]
visible = false
position = Vector2(966.833, 454.75)
scale = Vector2(0.376667, 0.376667)
texture = ExtResource("7_rr7b6")

[node name="Outline3" type="Sprite2D" parent="."]
visible = false
position = Vector2(995.833, 454.75)
scale = Vector2(0.376667, 0.376667)
texture = ExtResource("7_rr7b6")

[node name="PencilTimer" parent="." instance=ExtResource("8_2n76m")]
